# keep-the-lads-in-check

./: .env.example  .gitignore  .replit  LICENSE  README.md  pyproject.toml
src/: main.py
src/bot/: __init__.py  apis.py  maintainance.py  messages.py
src/bot/commands/: __init__.py
src/bot/commands/handlers/: __init__.py  administrator.py  audio.py  fun.py  moderator.py
src/bot/database/: __init__.py  censored_channels.py  permissions.py  stickers_cache.py
src/bot/utils/: __init__.py  messages.py  permissions.py
